Iniciando la página web

--- a/P1/index.html
+++ b/P1/index.html
@@ -2,10 +2,41 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Ola Ke ase</title>
+    <title>CV Nacho Cruz</title>
   </head>
   <body>
-    <h1>MI CV</h1>
-    <p>Holaa!!</p>
+    <h1>Rick Sánchez</h1>
+        <img src="foto.jpg" alt="Este soy yo">
+    <h2>Estudiante de Ingeniería en Sistemas Audiovisuales y multimedia</h2>
+    <p>Esto es un encabezado donde voy a dar una breve introducción de mi perfil.
+    Soy responsable, dinámico, etc, etc.</p>
+    <h3>Contacto</h3>
+    <p>
+    <img src="telefono.jpg" alt="telefono" width="20px">
+    612345678 / 912345678
+    </p>
+    <p>
+    <img src="email.png" alt="correo electónico" width="20px">
+    ricksanchez@gazorpazorp.es
+    </p>
+    <p>
+    <img src="ubicacion.png" alt="Ubicacion" width="20px">
+    Planeta Tierra del Universo C-137
+    </p>
+    <p>
+    <img src="paginaweb.jpg" alt=" ">
+    <a href="Enlace a la pagina web">Enlace a la pagina web</a>
+    </p>
+    <h3>Redes sociales</h3>
+    <p>
+    <img src="instagram.jpg" alt="@loquesea">
+    </p>
+    <p>
+    <img src="facebook.jpg" alt="LO QUE SEA">
+    </p>
+    <p>
+    <img src="linkedin.jpg" alt="Mi linkedin">
+    </p>
+    <button type="button" name="button">Formación</button>
   </body>
 </html>
