Avanzando el CV

--- a/P1/index.html
+++ b/P1/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>CV Nacho Cruz</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <h1>Rick Sánchez</h1>
@@ -12,7 +13,7 @@
     Soy responsable, dinámico, etc, etc.</p>
     <h3>Contacto</h3>
     <p>
-    <img src="telefono.jpg" alt="telefono" width="20px">
+    <img src="telefono.png" alt="telefono" width="20px">
     612345678 / 912345678
     </p>
     <p>
@@ -24,18 +25,18 @@
     Planeta Tierra del Universo C-137
     </p>
     <p>
-    <img src="paginaweb.jpg" alt=" ">
-    <a href="Enlace a la pagina web">Enlace a la pagina web</a>
+    <img src="pagina.png" alt="Pagina web" width="20px">
+    <a href="https://www.rickandmorty.com/">Enlace a la pagina web</a>
     </p>
     <h3>Redes sociales</h3>
     <p>
-    <img src="instagram.jpg" alt="@loquesea">
+    <img src="instagram.png" alt="@loquesea"  width="20px">
     </p>
     <p>
-    <img src="facebook.jpg" alt="LO QUE SEA">
+    <img src="facebook.png" alt="LO QUE SEA"  width="20px">
     </p>
     <p>
-    <img src="linkedin.jpg" alt="Mi linkedin">
+    <img src="linkedin.png" alt="Mi linkedin"  width="20px">
     </p>
     <button type="button" name="button">Formación</button>
   </body>
