Avanzando el CV

--- a/P1/index.html
+++ b/P1/index.html
@@ -6,38 +6,156 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>Rick Sánchez</h1>
-        <img src="foto.jpg" alt="Este soy yo">
-    <h2>Estudiante de Ingeniería en Sistemas Audiovisuales y multimedia</h2>
-    <p>Esto es un encabezado donde voy a dar una breve introducción de mi perfil.
-    Soy responsable, dinámico, etc, etc.</p>
-    <h3>Contacto</h3>
-    <p>
-    <img src="telefono.png" alt="telefono" width="20px">
-    612345678 / 912345678
-    </p>
-    <p>
-    <img src="email.png" alt="correo electónico" width="20px">
-    ricksanchez@gazorpazorp.es
-    </p>
-    <p>
-    <img src="ubicacion.png" alt="Ubicacion" width="20px">
-    Planeta Tierra del Universo C-137
-    </p>
-    <p>
-    <img src="pagina.png" alt="Pagina web" width="20px">
-    <a href="https://www.rickandmorty.com/">Enlace a la pagina web</a>
-    </p>
-    <h3>Redes sociales</h3>
-    <p>
-    <img src="instagram.png" alt="@loquesea"  width="20px">
-    </p>
-    <p>
-    <img src="facebook.png" alt="LO QUE SEA"  width="20px">
-    </p>
-    <p>
-    <img src="linkedin.png" alt="Mi linkedin"  width="20px">
-    </p>
-    <button type="button" name="button">Formación</button>
+    <h1 align='center'>Rick Sánchez</h1>
+    <table>
+        <tr>
+          <td>
+            <img src="foto.jpg" alt="Este soy yo">
+            <div class="special">
+              <h3  align='center'>Redes sociales</h3>
+              <p>
+                <img src="instagram.png" alt="@loquesea" width="20px">
+                @ricksanchez
+              </p>
+              <p>
+                <img src="facebook.png" alt="LO QUE SEA"  width="20px">
+                Rick Sánchez
+              </p>
+              <p>
+                <img src="linkedin.png" alt="Mi linkedin"  width="20px">
+                Rick Sánchez
+              </p>
+            </div>
+          </td>
+          <td>
+            <div class="special" align="center">
+              Mi nombre es Rick Sánchez y soy el padre de la ciencia
+              de este mundo. He inventado el viaje interdimensional
+              mediante la pistola de portales. Soy embajador en más
+              de 147 universos, ¡¡y tengo mi propia serie de televisión!!
+            </div>
+            <div class="special">
+
+              <h3  align='center'>Contacto</h3>
+              <p>
+                <img src="telefono.png" alt="telefono" width="20px">
+                612345678 / 912345678
+              </p>
+              <p>
+                <img src="email.png" alt="correo electónico" width="20px">
+                ricksanchez@gazorpazorp.es
+              </p>
+              <p>
+                <img src="ubicacion.png" alt="Ubicacion" width="20px">
+                Planeta Tierra del Universo C-137
+              </p>
+              <p>
+                <img src="pagina.png" alt="Pagina web" width="20px">
+                <a href="https://www.rickandmorty.com/">Enlace a la pagina web</a>
+              </p>
+            </div>
+          </td>
+        </tr>
+    </table>
+
+    <div align="center">
+      <h3>Formación</h3>
+      <p>Septiembre 2005-Junio 2010, Universidad Rey Juan Carlos, Grado en matemáticas(excelentes calificaciones)</p>
+      <p>Septiembre 20010-Junio 2012, Universidad Politécnica de Madrid, Máster en Física aplicada</p>
+      <p>Septiembre 2012-Junio 2014, Universidad Complutense de Madrid, Máster en Ingeniería aeroespacial</p>
+    </div>
+    <div align="center">
+      <h3>Cursos profesionales</h3>
+      <p>Permiso de conducción espacial tipo C</p>
+      <p>Monitor de ocio y tiempo libre</p>
+      <p>Licencias de armas láser</p>
+    </div>
+    <div align="center">
+      <h3>Experiencia laboral</h3>
+      <p>Profesor de ciencias en el instituto Meeseek</p>
+      <p>Dj en discoteca C-51</p>
+      <p>Espía para el gobierno espacial de los Estados Unidos</p>
+    </div>
+    <div>
+      <h3 align="center">Idiomas </h3>
+      <ol>
+        <li>
+          Español
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+        </li>
+        <li>
+          Inglés
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="18px">
+          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="18px">
+        </li>
+        <li>
+          Alienígena
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="18px">
+        </li>
+      </ol>
+    </div>
+    <div>
+      <h3 align="center">Ofimática</h3>
+        <div class="special2" align="center">
+          <p>Atom</p>
+          <img src="50.png" alt="50 %"  width="40px">
+        </div>
+        <div class="special2" align="center">
+          <p>JavaScript</p>
+          <img src="25.png" alt="25 %"  width="40px">
+        </div>
+        <div class="special2" align="center">
+          <p>HTML</p>
+          <img src="100.png" alt="1000 %"  width="40px">
+        </div>
+        <div class="special2" align="center">
+          <p>FreeCAD</p>
+          <img src="75.png" alt="75 %"  width="40px">
+        </div>
+    </div>
+    <div >
+      <h3  align='center'>Hobbies</h3>
+        <table  class="special4" align='center'>
+          <td class="special3">
+            <p >
+              <img src="naturaleza.jpg" alt="naturaleza"  width="160px">
+            </p>
+          </td>
+          <td class="special3">
+            <p>Naturaleza</p>
+          </td>
+        </table>
+        <table  class="special4" align='center'>
+          <td class="special3">
+            <p>Música</p>
+          </td>
+          <td class="special3">
+            <p>
+              <img src="musica.jpg" alt="musica"  width="160px">
+            </p>
+          </td>
+        </table>
+        <table  class="special4 "align='center'>
+          <td class="special3">
+            <p>
+              <img src="pesca.jpg" alt="pesca"  width="160px">
+            </p>
+          </td>
+          <td class="special3">
+            <p>Pesca</p>
+          </td>
+        </table>
+    </div>
   </body>
 </html>
