Avanzando en la calculadora

--- a/P2/index.html
+++ b/P2/index.html
@@ -8,37 +8,38 @@
     </script>
   </head>
   <body>
-    <div >
-      <p></p>
+    <div class="general">
+      <div>
+        <p id="display" align="right">0</p>
+      </div>
+      <div>
+        <button class= "cdigito" value="7">7</button>
+        <button class= "cdigito" value="8">8</button>
+        <button class= "cdigito" value="9">9</button>
+        <button id="testDEL">DEL</button>
+        <button type="button" id="clear">AC</button>
+      </div>
+      <div>
+        <button class= "cdigito" value="4">4</button>
+        <button class= "cdigito" value="5">5</button>
+        <button class= "cdigito" value="6">6</button>
+        <button class= "operacion" value="*">X</button>
+        <button class= "operacion" value="/">/</button>
+      </div>
+      <div>
+        <button class= "cdigito" value="1">1</button>
+        <button class= "cdigito" value="2">2</button>
+        <button class= "cdigito" value="3">3</button>
+        <button class= "operacion" value="+">+</button>
+        <button class= "operacion" value="-">-</button>
+      </div>
+      <div>
+        <button class= "cdigito" value="0">0</button>
+        <button class= "cdigito" value=".">.</button>
+        <button class= "operacion" value="**">EXP</button>
+        <button id="testANS">ANS</button>
+        <button type="button" id="igual">=</button>
+      </div>
     </div>
-    <div>
-      <button id="test7">7</button>
-      <button id="test8">8</button>
-      <button id="test9">9</button>
-      <button id="testDEL">DEL</button>
-      <button id="testAC">AC</button>
-    </div>
-    <div>
-      <button id="test4">4</button>
-      <button id="test5">5</button>
-      <button id="test6">6</button>
-      <button id="testX">X</button>
-      <button id="test/">/</button>
-    </div>
-    <div>
-      <button id="test1">1</button>
-      <button id="test2">2</button>
-      <button id="test3">3</button>
-      <button id="test+">+</button>
-      <button id="test-">-</button>
-    </div>
-    <div>
-      <button id="test0">0</button>
-      <button id="test.">.</button>
-      <button id="testEXP">EXP</button>
-      <button id="testANS">ANS</button>
-      <button id="test=">=</button>
-    </div>
-
   </body>
 </html>
