Avanzando la práctica 4

--- a/P4/index.html
+++ b/P4/index.html
@@ -6,15 +6,21 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <p>Prueba de vídeo</p>
-    <video loop id="videoMain"></video>
+    <p style="margin-left: 250px">Prueba de vídeo</p>
+    <video loop id="videoMain"  style="margin-left: 100px"></video>
     <br>
-    <p>Máster de vídeo</p>
     <br>
-    <video loop id="video1"></video>
+    <video autoplay loop id="video1"></video>
+    <video loop id="video2" ></video>
+    <video loop id="video3" ></video>
     <br>
-    <button id="play">Ver!</button>
-    <button id="stop">Parar</button>
+    <button id="Video1" style="margin-left: 80px">Sel</button>
+    <button id="Video2" style="margin-left: 170px">Sel</button>
+    <button id="Video3" style="margin-left: 170px">Sel</button>
+    <br>
+    <br>
+    <br>
+    <button id="Inicio" style="margin-left: 282px">Iniciar</button>
 
   </body>
 </html>
