--- a/P4/index.html
+++ b/P4/index.html
@@ -10,9 +10,9 @@
     <video loop id="videoMain"  style="margin-left: 100px"></video>
     <br>
     <br>
-    <video autoplay loop id="video1"></video>
-    <video loop id="video2" ></video>
-    <video loop id="video3" ></video>
+    <video loop id="video1" muted></video>
+    <video loop id="video2" muted></video>
+    <video loop id="video3" muted></video>
     <br>
     <button id="Video1" style="margin-left: 80px">Sel</button>
     <button id="Video2" style="margin-left: 170px">Sel</button>
@@ -20,7 +20,8 @@
     <br>
     <br>
     <br>
-    <button id="Inicio" style="margin-left: 282px">Iniciar</button>
+    <button id="Inicio1" style="margin-left: 180px">Iniciar modo normal</button>
+    <button id="Inicio2" style="margin-left: 20px">Iniciar modo automático</button>
 
   </body>
 </html>
