--- a/P5/index.html
+++ b/P5/index.html
@@ -13,13 +13,13 @@
       <td>
         <h2>Imagen original</h2>
         <p class="special">
-          <img src="imagen.jpg" id="imagesrc" >
+          <img src="imagen2.jpg" id="imagesrc" width="300">
         </p>
       </td>
       <td>
         <h2>Imagen manipulada</h2>
         <p class="special">
-          <canvas id="canvas"></canvas>
+          <canvas id="canvas"  width="300"></canvas>
         </p>
       </td>
     <table >
@@ -27,6 +27,7 @@
 
     <button id="Grises" style="margin-left: 350px">Grises</button>
     <button id="Colores" style="margin-left: 50px">Colores</button>
+    <button id="Especular" style="margin-left: 50px">Especular</button>
     <br><br/>
 
     <br>
