--- a/P5/index.html
+++ b/P5/index.html
@@ -7,17 +7,20 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-
-
-    <table >
+    <table>
       <td>
-        <h2>Imagen original</h2>
+        <h2 style="margin-left: 60px">Imágenes originales</h2>
+        <button id="Sel1" style="margin-left: 80px">Seleccionar Imagen 1</button>
         <p class="special">
           <img src="imagen2.jpg" id="imagesrc" width="300">
         </p>
+        <button id="Sel2" style="margin-left: 80px">Seleccionar Imagen 2</button>
+        <p class="special">
+          <img src="flores.jpg" id="image2src" width="300" height="200">
+        </p>
       </td>
       <td>
-        <h2>Imagen manipulada</h2>
+        <h2 style="margin-left: 60px">Imagen manipulada</h2>
         <p class="special">
           <canvas id="canvas"  width="300"></canvas>
         </p>
@@ -25,9 +28,12 @@
     <table >
 
 
-    <button id="Grises" style="margin-left: 350px">Grises</button>
+    <button id="Grises" style="margin-left: 250px">Grises</button>
     <button id="Colores" style="margin-left: 50px">Colores</button>
     <button id="Especular" style="margin-left: 50px">Especular</button>
+    <button id="Invertir" style="margin-left: 50px">Invertir</button>
+    <button id="Negativo" style="margin-left: 50px">Negativo</button>
+    <button id="Vintage" style="margin-left: 50px">Vintage</button>
     <br><br/>
 
     <br>
