--- a/P4/index.html
+++ b/P4/index.html
@@ -3,25 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Práctica 4</title>
+    <link rel="stylesheet" href="index.css">
     <script src="index.js" defer></script>
   </head>
   <body>
-    <p style="margin-left: 250px">Prueba de vídeo</p>
-    <video loop id="videoMain"  style="margin-left: 100px"></video>
+    <div>
+      <h1 style="margin-left: 280px">Vídeo en emisión</h1>
+      <video class="special" loop id="videoMain"  style="margin-left: 200px"></video>
+    </div>
     <br>
     <br>
-    <video loop id="video1" muted></video>
-    <video loop id="video2" muted></video>
-    <video loop id="video3" muted></video>
-    <br>
-    <button id="Video1" style="margin-left: 80px">Sel</button>
-    <button id="Video2" style="margin-left: 170px">Sel</button>
-    <button id="Video3" style="margin-left: 170px">Sel</button>
-    <br>
-    <br>
-    <br>
-    <button id="Inicio1" style="margin-left: 180px">Iniciar modo normal</button>
-    <button id="Inicio2" style="margin-left: 20px">Iniciar modo automático</button>
+    <div>
+      <video class="special2" loop id="video1" muted></video>
+      <video class="special2" loop id="video2" muted></video>
+      <video class="special2" loop id="video3" muted></video>
+      <video class="special2" loop id="video4" muted></video>
+      <br>
+      <button id="Video1" style="margin-left: 80px">Sel</button>
+      <button id="Video2" style="margin-left: 150px">Sel</button>
+      <button id="Video3" style="margin-left: 160px">Sel</button>
+      <button id="Video4" style="margin-left: 165px">Sel</button>
+      <br>
+      <br>
+      <br>
+
+      <button id="Inicio1" style="margin-left: 180px">Iniciar modo normal</button>
+      <button id="Inicio2" style="margin-left: 20px">Iniciar modo automático</button>
+      <button id="Inicio3" style="margin-left: 20px">Iniciar modo bucle</button>
+    </div>
 
   </body>
 </html>
