--- a/P1/index.html
+++ b/P1/index.html
@@ -14,15 +14,15 @@
             <div class="special">
               <h3  align='center'>Redes sociales</h3>
               <p>
-                <img src="instagram.png" alt="@loquesea" width="20px">
+                <img src="instagram.png" alt="@ricksanchez" width="20px">
                 @ricksanchez
               </p>
               <p>
-                <img src="facebook.png" alt="LO QUE SEA"  width="20px">
+                <img src="facebook.png" alt="Rick Sánchez"  width="20px">
                 Rick Sánchez
               </p>
               <p>
-                <img src="linkedin.png" alt="Mi linkedin"  width="20px">
+                <img src="linkedin.png" alt="Rick Sánchez"  width="20px">
                 Rick Sánchez
               </p>
             </div>
@@ -79,29 +79,29 @@
     <div>
       <h3 align="center">Idiomas </h3>
       <ol>
-        <li>
+        <li align="center">
           Español
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
         </li>
-        <li>
+        <li align="center">
           Inglés
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="18px">
-          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="18px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="22px">
+          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="22px">
         </li>
-        <li>
+        <li align="center">
           Alienígena
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="20px">
-          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="18px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaAmarilla.png" alt="Estrella Amarilla"  width="25px">
+          <img src="EstrellaNegra.png" alt="Estrella Negra"  width="22px">
         </li>
       </ol>
     </div>
@@ -109,19 +109,19 @@
       <h3 align="center">Ofimática</h3>
         <div class="special2" align="center">
           <p>Atom</p>
-          <img src="50.png" alt="50 %"  width="40px">
+          <img src="50.png" alt="50 %"  width="60px">
         </div>
         <div class="special2" align="center">
           <p>JavaScript</p>
-          <img src="25.png" alt="25 %"  width="40px">
+          <img src="25.png" alt="25 %"  width="60px">
         </div>
         <div class="special2" align="center">
           <p>HTML</p>
-          <img src="100.png" alt="1000 %"  width="40px">
+          <img src="100.png" alt="100 %"  width="60px">
         </div>
         <div class="special2" align="center">
           <p>FreeCAD</p>
-          <img src="75.png" alt="75 %"  width="40px">
+          <img src="75.png" alt="75 %"  width="60px">
         </div>
     </div>
     <div >
