--- a/P2/index.html
+++ b/P2/index.html
@@ -7,7 +7,7 @@
     <script src="index.js" defer>
     </script>
   </head>
-  <body>
+  <body >
     <div class="general">
       <div>
         <p id="display" align="right">0</p>
@@ -34,8 +34,8 @@
         <button class= "operacion" value="-">-</button>
       </div>
       <div>
-        <button class= "cdigito" value="0">0</button>
-        <button class= "cdigito" value=".">.</button>
+        <button class= "special" value="0">0</button>
+        <button class= "special" value=".">.</button>
         <button class= "operacion" value="**">EXP</button>
         <button id="testANS">ANS</button>
         <button type="button" id="igual">=</button>
