--- a/P3/index.html
+++ b/P3/index.html
@@ -9,13 +9,10 @@
     <title>PONG!</title>
   </head>
   <body>
-    <h1>PONG!</h1>
     <canvas id="canvas" width="600" height = "400"></canvas>
     <br>
+    <button id="controls">Controls</button>
     <button id="start">Start!</button>
-    <button id="stop">Stop</button>
-    <p>Pulsa S para sacar</p>
-    <p>Teclas q y a: Mover raqueta izquierda</p>
-    <p>Teclas p y l: Mover raqueta derecha</p>
+    <button id="stop">Exit</button>
   </body>
 </html>
